@@ -59,7 +59,8 @@
       <para>NOTE: you should open a <replaceable>DIRECTORY</replaceable> and 
       <replaceable>NOT a FILE</replaceable> when opening 
       &app; database. The directory you need to open should contain the 
-      database file (data.gramps or data.zodb) as well as any possible copies 
+      database file <replaceable>data.gramps</replaceable> as well as any 
+      possible copies 
       of media objects. Such a directory is created by &app; when you start 
       a new database and is updated each time the database is saved. </para> 
     </sect2>
