@@ -1,3 +1,7 @@
+2003-12-04  Alex Roitman  <shura@alex.neuro.umn.edu>
+	* doc/gramps-manual/C/getstart.xml: Remove ZODB support section. 
+	* doc/gramps-manual/C/usage.xml: Remove ZODB support section.
+
 2003-12-03  Alex Roitman  <shura@alex.neuro.umn.edu>
 	* src/plugins/ReadGedcom.py (parse_source): Stop TEXT messing
 	up the title; add ABBR to the note field (was ignored).
